fix: Comment out local dependency for CI/CD builds
The lightweight-charts-pro local file dependency prevents CI/CD
builds from succeeding. This dependency is optional for documentation
builds and basic API functionality.

For local development, users can install it manually or uncomment
the line in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,9 @@ dependencies = [
     "pydantic>=2.0.0",
     "pandas>=2.0.0",
     "numpy>=1.24.0",
-    "lightweight-charts-pro @ file:///Users/nandkapadia/lightweight-charts-pro-python",
+    # Note: lightweight-charts-pro is an optional dependency for local development
+    # It's not required for documentation builds or basic API functionality
+    # "lightweight-charts-pro @ file:///Users/nandkapadia/lightweight-charts-pro-python",
 ]
 
 [project.optional-dependencies]
